# Cerarria

./: .gitignore  CMakeLists.txt  README.md  build.sh  server.sh
app/: CMakeLists.txt  constants.h  constatns.h  main.cpp
app/render/: Chat.cpp  ConsoleWindow.cpp  ConsoleWindow.h  chat.h
app/user/: user.h
console/: ColorString.cpp  ColorString.h  clear.cpp  clear.h  color.h  input.cpp
server/: package.json
server/src/: main.ts
